@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-17T00:27:59Z",
+  "timestamp" : "2022-04-18T16:06:51Z",
   "count_outdated" : 272,
   "uniques_outdated" : 52,
-  "count" : 283,
-  "uniques" : 55,
+  "count" : 286,
+  "uniques" : 56,
   "views" : [
     {
       "timestamp": "2022-04-05T00:00:00Z",
@@ -23,6 +23,13 @@
       "timestamp": "2022-04-10T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-04-18T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
