@@ -1,5 +1,5 @@
 {
-  "count": 11,
+  "count": 14,
   "uniques": 3,
   "views": [
     {
@@ -15,6 +15,11 @@
     {
       "timestamp": "2022-04-10T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-18T00:00:00Z",
+      "count": 3,
       "uniques": 1
     }
   ]
