@@ -1,3 +1,9 @@
+2022-04-18T16:06:51Z:
+* notice: last 14d: all unq: 14 3
+* notice: prev accum: outdated-all outdated-unq / all unq: 272 52 / 283 55
+* notice: next accum: outdated-all outdated-unq / all unq: 272 52 / 286 56
+* notice: prev json diff // prev day diff: unq all: +1 +3 / -0 -0 // +1 +3 / -0 -0
+
 2022-04-17T00:27:59Z:
 * notice: last 14d: all unq: 11 3
 * notice: prev accum: outdated-all outdated-unq / all unq: 269 51 / 283 55
